labels in input felder geschrieben

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -59,14 +59,14 @@
       <img src="img/logo_text.png" style="width: 140px;"/><br />
       <h3 class="dark-grey">Eröffnen Sie Ihren simpleCert-Account</h3>
     </center>
- 
+ <br />
                 <div class="form-group col-lg-6">
-                    <label>Vorname</label>
-                    <input type="" name="" class="form-control" id="" value="">
+                    <!--<label>Vorname</label>-->
+                    <input type="" name="" class="form-control" id="" placeholder="Vorname">
                 </div>
                 <div class="form-group col-lg-6">
-                    <label>Nachname</label>
-                    <input type="" name="" class="form-control" id="" value="">
+                    <!--<label>Nachname</label>-->
+                    <input type="" name="" class="form-control" id="" placeholder="Nachname">
                 </div>
 
                 <!-- <div class="form-group col-lg-6">
@@ -75,23 +75,23 @@
                 </div> -->
                 <div class="form-group col-lg-6">
                  <!--<div class="form-group"> -->
-                    <label for="sel1">Land</label>
+                    <!--<label for="sel1">Land</label>-->
                     <select class="form-control" id="sel1">
-                      <option>Deutschland</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
+					    <option value="" selected disabled>Land</option>
+					    <option value="">Deutschland</option>
+					    <option value="">Österreich</option>
+					    <option value="">Schweiz</option>
                     </select>
                   <!--</div>-->
                   </div>
                 <div class="form-group col-lg-6">
-                    <label>Bundesland</label>
-                    <input type="" name="" class="form-control" id="" value="">
+                    <!--<label>Bundesland</label>-->
+                    <input type="" name="" class="form-control" id="" placeholder="Bundesland">
                 </div>
 
                 <div class="form-group col-lg-6">
-                    <label>Stadt</label>
-                    <input type="" name="" class="form-control" id="" value="">
+                    <!--<label>Stadt</label>-->
+                    <input type="" name="" class="form-control" id="" placeholder="Stadt">
                 </div>
                 <!--<div class="form-group col-lg-6">
                     <label>Abteilung</label>
@@ -100,42 +100,42 @@
                 <div class="form-group col-lg-6">
 
                  <!--<div class="form-group"> -->
-                    <label for="sel1">Abteilung</label>
+                    <!--<label for="sel1">Abteilung</label>-->
                     <select class="form-control" id="sel1">
-                      <option>...</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
+                      <option value="" selected disabled>Abteilung</option>
+                      <option>A</option>
+                      <option>B</option>
+                      <option>C</option>
                     </select>
 
                   </div>
                 <div class="form-group col-lg-6">
-                    <label>Personalnummer</label>
-                    <input type="" name="" class="form-control" id="" value="">
+                    <!--<label>Personalnummer</label>-->
+                    <input type="" name="" class="form-control" id="" placeholder="Personalnummer">
                 </div>
 
                 <div class="clearfix"></div>
 
                 <div class="form-group col-lg-6">
-                    <label>Email Addresse</label>
-                    <input type="" name="" class="form-control" id="" value="">
+                    <!--<label>Email Addresse</label>-->
+                    <input type="" name="" class="form-control" id="" placeholder="Email Addresse">
                 </div>
                 <div class="form-group col-lg-6">
-                    <label>Email Addresse wiederholen </label>
-                    <input type="" name="" class="form-control" id="" value="">
+                    <!--<label>Email Addresse wiederholen</label>-->
+                    <input type="" name="" class="form-control" id="" placeholder="Email Addresse wiederholen">
                 </div>  
 
                 <div class="form-group col-lg-6">
-                    <label>Passwort</label>
-                    <input type="password" name="" class="form-control" id="" value="">
+                    <!--<label>Passwort</label>-->
+                    <input type="password" name="" class="form-control" id="" placeholder="Passwort">
                 </div>
                 <div class="form-group col-lg-6">
-                    <label>Passwort wiederholen</label>
-                    <input type="password" name="" class="form-control" id="" value="">
+                    <!--<label>Passwort wiederholen</label>-->
+                    <input type="password" name="" class="form-control" id="" placeholder="Passwort wiederholen">
                 </div>
 
               <button type="submit" class="btn btn-lg btn-primary btn-block btn-small btn-red">Absenden</button>
-
+              <br />
 </div> <!-- End container -->
   </body>
 </html>
