jetzt registrieren button verlinkt

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -73,7 +73,8 @@
 	 <br />
 	 <hr style="height: 1px; background: #c6c6c6;">
 	 <form class="form-signin">
-	 <button class="btn btn-lg btn-primary btn-block btn-small" href="register.html">Neu anmelden</button>
+	 <!--<button class="btn btn-lg btn-primary btn-block btn-small" href="register.html">Neu anmelden</button>-->
+   <a class="btn btn-lg btn-primary btn-block btn-small" href="register.html" role="button">Jetzt registieren</a>
 </form>
 <br />
 	</div>
