einloggen button auf intern verlinkt

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -68,7 +68,8 @@
             <input type="checkbox" value="remember-me"> Remember me
           </label>-->
         </div>
-        <button class="btn btn-lg btn-red btn-block" type="submit">Einloggen</button>
+        <!--<button class="btn btn-lg btn-red btn-block" type="submit">Einloggen</button>-->
+        <a class="btn btn-lg btn-red btn-block" href="intern/index.html" role="button">Einloggen</a>
      	 </form>
 	 <br />
 	 <hr style="height: 1px; background: #c6c6c6;">
