--- a/WebContent/register.html
+++ b/WebContent/register.html
@@ -1,119 +1,266 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="img/favicon.ico">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+<meta name="description" content="">
+<meta name="author" content="">
+<link rel="icon" href="img/favicon.ico">
 
-    <title>simpleCert Login</title>
+<title>simpleCert Registrierung</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+<!-- Bootstrap core CSS -->
+<link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/register.css" rel="stylesheet"> 
+<!-- Custom styles for this template -->
+<link href="css/register.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
+<!-- Custom CSS -->
+<link href="intern/dist/css/sb-admin-2.css" rel="stylesheet">
+
+<!-- Custom Fonts -->
+<link
+	href="intern/bower_components/font-awesome/css/font-awesome.min.css"
+	rel="stylesheet" type="text/css">
+
+
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-	
-		<style>
 
-.container{
-		margin: 80px auto;
-		max-width: 600px;
-		height: auto;
-		background-color: #f0f0f0;
-		
-		}
-	
+<style>
+.container {
+	margin: 40px auto;
+	max-width: 600px;
+	height: auto;
+	background-color: #F9F9F9;
+	text-align: center;
+}
+
 .btn-red {
-  color: #fff!important;
-  background-color: #C03A2A!important;
-  border-color: #A83A2A!important;
-  margin: 20px auto 10px auto;
+	color: #fff;
+	background-color: #C03A2A;
+	border-color: #A83A2A;
+	margin: 20px auto 10px auto;
+	outline: none;
+	width: 50%;
+	margin-bottom: 25px;
+}
+
+.btn-red:hover, .btn-red:focus {
+	color: #fff;
+	background-color: #A83A2A;
+	border-color: #A83A2A;
+	outline: none;
+	transition: background-color .4s ease;
 }
 
 .btn-primary {
-  color: #000;
-  background-color: #C8C8C8;
-  border-color: #C8C8C8;
+	color: #000;
+	background-color: #C8C8C8;
+	border-color: #C8C8C8;
 }
 
-.btn-small{width: 320px;}
+.btn-small {
+	width: 320px;
+}
 
-	</style>
-	
-  </head>
+.messagebar_placeholder {
+	position: relative;
+	top: -40px;
+	height: 55px;
+}
 
-  <body>
+.messagebar {
+	position: relative;
+	height: 55px;
+	bottom: 55px;
+	border-radius: 0px;
+	padding: 0;
+	margin: 0;
+	border: 0;
+	transition: bottom 750ms ease;
+	line-height: 55px;
+	border-radius: 0px;
+}
 
- <div class="container">
-    <center>
-      <img src="img/logo_text.png" style="width: 140px;"/><br />
-      <h3 class="dark-grey">Eröffnen Sie Ihren simpleCert-Account</h3>
-    </center>
- <br />
- <form action="RegisterServlet" method="post">
-                <div class="form-group col-lg-6">
-                    <!--<label>Vorname</label>-->
-                    <input type="text" name="firstName" class="form-control" id="" placeholder="Vorname">
-                </div>
-                <div class="form-group col-lg-6">
-                    <!--<label>Nachname</label>-->
-                    <input type="text" name="lastName" class="form-control" id="" placeholder="Nachname">
-                </div>
+.messageicon {
+	outline: none;
+	margin-left: 15px;
+	margin-right: 10px;
+}
 
-                <!--<div class="form-group col-lg-6">
-                    <label>Abteilung</label>
-                    <input type="" name="" class="form-control" id="" value="">
-                </div> -->
-                <div class="form-group col-lg-6">
+.invalid {
+	bottom: 0;
+}
+</style>
+<head>
 
-                 <!--<div class="form-group"> -->
-                    <!--<label for="sel1">Abteilung</label>-->
-                    <select class="form-control" id="sel1" name="organizationalUnit">
-                      <option value="" selected disabled>Abteilung</option>
-                      <option>IT</option>
-                      <option>Verwaltung</option>
-                      <option>Vertrieb</option>
-                    </select>
 
-                  </div>
-                <div class="form-group col-lg-6">
-                    <!--<label>Personalnummer</label>-->
-                    <input type="number" name="personalId" class="form-control" id="" placeholder="Personalnummer">
-                </div>
+</head>
 
-                <div class="clearfix"></div>
+<body style="background-color: white">
+	<div class="messagebar_placeholder">
+		<div id="messagebar" style="cursor: context-menu;"
+			class="alert messagebar"></div>
+	</div>
+	<div class="container">
+		<img src="img/logo_text.png" style="width: 140px; margin-top: 20px;" /><br />
+		<h3 style="color: #595959">Eröffnen Sie Ihren simpleCert-Account.</h3>
+		<br />
+		<form name="form_register" action="RegisterServlet" method="post">
+			<div class="form-group col-lg-6">
+				<input type="text" name="firstName" class="form-control"
+					id="firstName" placeholder="Vorname" required>
+			</div>
+			<div class="form-group col-lg-6">
+				<input type="text" name="lastName" class="form-control"
+					id="lastName" placeholder="Nachname" required>
+			</div>
+			<div class="form-group col-lg-6">
 
-                <div class="form-group col-lg-6">
-                    <!--<label>Email Addresse</label>-->
-                    <input type="email" name="emailAddress" class="form-control" id="" placeholder="Email Addresse">
-                </div>
-                <div class="form-group col-lg-6">
-                    <!--<label>Email Addresse wiederholen</label>-->
-                    <input type="email" class="form-control" id="" placeholder="Email Addresse wiederholen">
-                </div>  
+				<!--<div class="form-group"> -->
+				<select class="form-control" id="organizationalUnit"
+					name="organizationalUnit">
+					<option value="" selected disabled>Abteilung</option>
+					<option>IT</option>
+					<option>Verwaltung</option>
+					<option>Vertrieb</option>
+				</select>
 
-                <div class="form-group col-lg-6">
-                    <!--<label>Passwort</label>-->
-                    <input type="password" name="password" class="form-control" id="" placeholder="Passwort">
-                </div>
-                <div class="form-group col-lg-6">
-                    <!--<label>Passwort wiederholen</label>-->
-                    <input type="password" class="form-control" id="" placeholder="Passwort wiederholen">
-                </div>
+			</div>
+			<div class="form-group col-lg-6">
+				<input type="number" name="personalId" id="personalId"
+					class="form-control" placeholder="Personalnummer" required>
+			</div>
 
-              <button type="submit" class="btn btn-lg btn-primary btn-block btn-small btn-red">Absenden</button>
-              </form>
-              <br />
-</div> <!-- End container -->
-  </body>
+			<div class="clearfix"></div>
+			<div class="form-group col-lg-6">
+				<input type="email" name="emailAddress" class="form-control"
+					id="emailAddress" placeholder="E-Mail-Adresse" required>
+			</div>
+
+			<div class="form-group col-lg-6">
+				<input type="email" class="form-control" draggable="false"
+					id="emailAddress_confirm" placeholder="E-Mail-Adresse wiederholen"
+					onchange="checkEmail()" required>
+			</div>
+
+			<div class="form-group col-lg-6">
+				<input type="password" name="password" class="form-control"
+					id="password" placeholder="Passwort" required>
+			</div>
+			<div class="form-group col-lg-6">
+				<input type="password" class="form-control" draggable="false"
+					id="password_confirm" placeholder="Passwort wiederholen"
+					onchange="checkPassword()" required>
+			</div>
+
+			<script type="text/javascript">
+				function checkEmail() {
+					var emailAddress = document.getElementById('emailAddress').value
+					var emailAddressConfirm = document
+							.getElementById('emailAddress_confirm').value
+					var emailAddressConfirmField = document
+							.getElementById('emailAddress_confirm')
+					var messagebar = document.getElementById('messagebar')
+
+					if (emailAddress !== emailAddressConfirm) {
+						emailAddressConfirmField.classList.add("has-error")
+						if (document.getElementById('messagebar').style.bottom !== 0) {
+							messagebar.classList.add("invalid")
+							messagebar.classList.add("alert-danger")
+						}
+
+						messagebar.innerHTML = '<div class="btn btn-default btn-circle messageicon" style="cursor: context-menu; border-color: #843534;"> <i id="messagebar_icon" style="color: #843534;" class="fa fa-times"></i> </div>'
+								+ "Wiederholte E-Mail-Adresse stimmt nicht mit der E-Mail-Adresse überein!"
+						return false;
+
+					} else {
+						emailAddressConfirmField.classList.remove("has-error")
+						messagebar.innerHTML = "";
+						messagebar.classList.remove("invalid")
+						messagebar.classList.add("messagebar")
+						messagebar.classList.remove("alert-danger")
+						return true;
+					}
+				}
+
+				function checkPassword() {
+					var password = document.getElementById('password').value
+					var passwordConfirm = document
+							.getElementById('password_confirm').value
+					var passwordConfirmField = document
+							.getElementById('password_confirm')
+					var messagebar = document.getElementById('messagebar')
+
+					if (password !== passwordConfirm) {
+						passwordConfirmField.classList.add("has-error")
+						if (document.getElementById('messagebar').style.bottom !== 0) {
+							messagebar.classList.add("invalid")
+							messagebar.classList.add("alert-danger")
+						}
+						messagebar.innerHTML = '<div class="btn btn-default btn-circle messageicon" style="cursor: context-menu; border-color: #843534;"> <i id="messagebar_icon" style="color: #843534;" class="fa fa-times"></i> </div>'
+								+ "Wiederholtes Passwort stimmt nicht mit dem Passwort überein!"
+						return false;
+					} else {
+						passwordConfirmField.classList.remove("has-error")
+						messagebar.innerHTML = "";
+						messagebar.classList.remove("invalid")
+						messagebar.classList.add("messagebar")
+						messagebar.classList.remove("alert-danger")
+						return true;
+					}
+
+				}
+
+				function checkInput() {
+					var firstName = document.getElementById('firstName').value
+					var lastName = document.getElementById('lastName').value
+					var organizationalUnit = document
+							.getElementById('organizationalUnit').value
+					var personalId = document.getElementById('personalId').value
+					var emailAddress = document.getElementById('emailAddress').value
+					var emailAddressConfirm = document
+							.getElementById('emailAddress_confirm').value
+					var password = document.getElementById('password').value
+					var passwordConfirm = document
+							.getElementById('password_confirm').value
+					var messagebar = document.getElementById('messagebar')
+
+					if (firstName !== "" && lastName !== ""
+							&& organizationalUnit !== "" && personalId !== ""
+							&& emailAddress !== ""
+							&& emailAddressConfirm !== "" && password !== ""
+							&& passwordConfirm !== "") {
+
+						messagebar.classList.remove("invalid")
+						messagebar.classList.remove("alert-warning")
+						messagebar.innerHTML = ""
+
+						if (checkEmail() && checkPassword()) {
+							form_register.submit()
+						}
+
+					} else {
+						messagebar.classList.remove("alert-danger")
+						messagebar.classList.add("invalid")
+						messagebar.classList.add("alert-warning")
+						messagebar.innerHTML = '<div class="btn btn-default btn-circle messageicon" style="cursor: context-menu; border-color: #66512c;"> <i id="messagebar_icon" style="color: #66512c;" class="fa fa-exclamation"></i> </div>'
+								+ "Bitte füllen Sie alle Felder aus!"
+					}
+				}
+			</script>
+
+			<button type="button" class="btn btn-lg btn-red btn-block"
+				onclick="checkInput()">Absenden</button>
+		</form>
+		<br />
+	</div>
+	<!-- End container -->
+</body>
 </html>
