--- a/WebContent/intern/index.html
+++ b/WebContent/intern/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="refresh" content="0;url=pages/index.jsp">
 <title>SimpleCert 2</title>
 <script language="javascript">
-    window.location.href = "/projectnash/Cs"
+    window.location.href = "pages/index.jsp"
 </script>
 </head>
 <body>
