--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,7 +5,7 @@
 <head>
 <meta http-equiv="refresh" content="0;url=pages/index.jsp">
 <title>Nash. Inc - Intranet</title>
-<script language="javascript">
+<script type="text/javascript">
     window.location.href = "index.jsp"
 </script>
 </head>
