Implemented 'Beantragen' case

--- a/WebContent/intern/pages/beantragen_2.html
+++ b/WebContent/intern/pages/beantragen_2.html
@@ -142,7 +142,7 @@
                             Schritt 2: Zertifikat herunterladen
                         </div>
                        <div class="panel-body">
-                            <p>Beantragen Sie ihr persönliches Sicherheits-Zertifikat, damit Sie es im nächsten Schritt - nach erfolgreicher Genehmigung - herunterladen können.</p>
+                            <p>Laden Sie nun ihr Zertifikat herunter und speichern Sie es, um es anschließen in ihren Browser importieren zu können.</p>
                         </div>
                         <div class="panel-footer">
                             <a href="beantragen_end.html"><button type="button" class="btn btn-danger">Herunterladen</button></a>
