added link from NashIncIndex to simplecert frontpage

--- a/WebContent/NashIncIndex.html
+++ b/WebContent/NashIncIndex.html
@@ -36,7 +36,7 @@
                 <li><a href="#">Urlaubsbeantragung</a></li>
                 <li><a href="#">Zeiterfassung</a></li>
                 <li class="divider"></li>
-                <li><a href="#">Zertifikatsverwaltung</a></li>
+                <li><a href="intern/index.html">Zertifikatsverwaltung</a></li>
                 <li class="divider"></li>
                 <li><a href="#">Fahrtenbücher</a></li>
               </ul>
