--- a/WebContent/NashIncIndex.html
+++ b/WebContent/NashIncIndex.html
@@ -11,7 +11,7 @@
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 		<link href="css/intranet_style.css" rel="stylesheet">
-    <link rel="shortcut icon" href="img/nash_favicon.ico" />
+    <link rel="shortcut icon" href="img/nashInc_favicon.ico" />
 	</head>
 	<body>
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
