intranet menü jetzt farbiger

--- a/WebContent/NashIncIndex.html
+++ b/WebContent/NashIncIndex.html
@@ -16,7 +16,7 @@
 	<body>
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="navbar-header">
-        <a style="color: #368bb3" class="navbar-brand" rel="home" href="#">Nash inc.</a>
+        <a style="color: #428BCA" class="navbar-brand" rel="home" href="#">Nash inc.</a>
 		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 		<span class="sr-only">Toggle navigation</span>
 		<span class="icon-bar"></span>
