--- a/WebContent/NashIncIndex.html
+++ b/WebContent/NashIncIndex.html
@@ -11,12 +11,12 @@
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 		<link href="css/intranet_style.css" rel="stylesheet">
-    <link rel="shortcut icon" href="img/nashInc_favicon.ico" />
+    <link rel="shortcut icon" href="img/favicon-nash.ico" />
 	</head>
 	<body>
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="navbar-header">
-        <a style="color: #428BCA" class="navbar-brand" rel="home" href="#">Nash inc.</a>
+        <a style="color: #333" class="navbar-brand" rel="home" href="#">Nash inc.</a>
 		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 		<span class="sr-only">Toggle navigation</span>
 		<span class="icon-bar"></span>
