--- a/WebContent/NashIncIndex.html
+++ b/WebContent/NashIncIndex.html
@@ -16,6 +16,7 @@
 	<body>
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="navbar-header">
+        <a class="navbar-brand"><img src="img/favicon-nash.ico" /></a>
         <a style="color: #333" class="navbar-brand" rel="home" href="#">Nash inc.</a>
 		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 		<span class="sr-only">Toggle navigation</span>
