--- a/WebContent/NashIncIndex.html
+++ b/WebContent/NashIncIndex.html
@@ -11,12 +11,12 @@
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 		<link href="css/intranet_style.css" rel="stylesheet">
-    <link rel="shortcut icon" href="img/favicon-nash.ico" />
+    <link rel="shortcut icon" href="img/nash/nash_favicon.ico" />
 	</head>
 	<body>
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="navbar-header">
-        <a class="navbar-brand"><img src="img/favicon-nash.ico" /></a>
+        <a class="navbar-brand"><img src="img/nash/nash_favicon.ico" /></a>
         <a style="color: #333" class="navbar-brand" rel="home" href="#">Nash inc.</a>
 		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 		<span class="sr-only">Toggle navigation</span>
@@ -92,7 +92,7 @@
     <div class="row">
       <div class="col-xs-12">
         <h2>Partnerschaft mit simpleCert</h2>
-        <center><img src="img/intranet_news_logo.png" /></center>
+        <center><img src="img/simplecert/simplecert_logo_128x128.png" style="margin: 20px" /></center>
         <p>Die Nash inc. ist eine Partnerschaft mit dem neuen Unternehmen simpleCert aus Stuttgart eingegangen.
            Durch die simpleCert wird das alte Zertifikat-System abgeschafft und durch eine neue und einfache Lösung ersetzt.
            Zu der Neuerung sagte Unternehmensleiter Steve Nash:</p>
