--- a/WebContent/intern/pages/beantragen_2.html
+++ b/WebContent/intern/pages/beantragen_2.html
@@ -82,7 +82,7 @@
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
 					<li>
-                    <img class="displayed" src="assets/img/cleanCert_logo_key_red.png" style="width:160px;"/>
+                    <img class="displayed" src="assets/img/simplecert_logo_text_128x128.png" style=" margin-top: 10px; margin-bottom: 15px" />
 					
 					</li>
                      <li>
