Beispiel Zeiterfassung hinzugefügt

--- a/WebContent/pages/zeiterfassung.html
+++ b/WebContent/pages/zeiterfassung.html
@@ -91,52 +91,216 @@
   <div class="col-sm-6">
     <div class="row">
       <div class="col-xs-12">
-        <h2>Partnerschaft mit simpleCert</h2>
-        <center><img src="img/simplecert/simplecert_logo_128x128.png" style="margin: 20px" /></center>
-        <p>Die Nash inc. ist eine Partnerschaft mit dem neuen Unternehmen simpleCert aus Stuttgart eingegangen.
-           Durch die simpleCert wird das alte Zertifikat-System abgeschafft und durch eine neue und einfache Lösung ersetzt.
-           Zu der Neuerung sagte Unternehmensleiter Steve Nash:</p>
-            <blockquote>
-              <p>Dank der <strong>simpleCert</strong> sind wir nun auf dem neusten Stand der Sicherheitstechnik. Dies ist ein wichtiger Schritt für die Nash inc.</p>
-              <p>Wir freuen uns auf eine gute Zusammenarbeit.</p>
-            </blockquote>
-            <p>Um in Zukunft Ihre Sicherheitszertifikate zu verwalten, folgen Sie bitte folgendem Pfad:</p>
-            <pre><code>Nash inc. Intranet -> Services -> Zertifikatsverwaltung</code></pre>
-            <p>Für weitere Fragen, ...</p>
+        <h2>Ihre Zeiterfassung</h2>
 
-        <p class="lead"><button class="btn btn-default">Mehr...</button></p>
-        <p class="pull-right"><span class="label label-default">News</span> <span class="label label-default">Nash inc.</span> <span class="label label-default">Kooperation</span></p>
-        <ul class="list-inline"><li><a href="#">Vor 2 Tagen</a></li><li><a href="#"><i class="glyphicon glyphicon-comment"></i> 4 Kommentare</a></li></ul>
+        <p>Hier sehen Sie Ihre Arbeitszeiten des aktuellen Monats. Bei Fragen oder Anmerkungen
+        bitte an die Durchwahl -66821 wenden.</p>
+
+        <h4>Aktueller Monat: Juni</h4>
+        <p>Nachtrag aus dem Vormonat: <b>+14:37</b></p>
+        <div class="col-md-6">
+          <table class="table table-striped text-center">
+            <thead>
+              <tr>
+                <th>Tag</th>
+                <th>Kommt</th>
+                <th>Geht</th>
+                <th>Anwesenheit</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1.</td>
+                <td>7:34</td>
+                <td>17:12</td>
+                <td>8:38</td>
+              </tr>
+              <tr>
+                <td>2.</td>
+                <td>7:31</td>
+                <td>17:41</td>
+                <td>9:10</td>
+              </tr>
+              <tr>
+                <td>3.</td>
+                <td>7:39</td>
+                <td>17:56</td>
+                <td>9:17</td>
+              </tr>
+              <tr>
+                <td>4.</td>
+                <td></td>
+                <td></td>
+                <td>Feiertag</td>
+              </tr>
+              <tr>
+                <td>5.</td>
+                <td></td>
+                <td></td>
+                <td>Gleittag</td>
+              </tr>
+              <tr>
+                <td>6.</td>
+                <td>--</td>
+                <td>--</td>
+                <td>--</td>
+              </tr>
+              <tr>
+                <td>7.</td>
+                <td>--</td>
+                <td>--</td>
+                <td>--</td>
+              </tr>
+              <tr>
+                <td>8.</td>
+                <td>7:28</td>
+                <td>16:12</td>
+                <td>8:24</td>
+              </tr>
+              <tr>
+                <td>9.</td>
+                <td>8:04</td>
+                <td>16:07</td>
+                <td>8:44</td>
+              </tr>
+              <tr>
+                <td>10.</td>
+                <td>7:44</td>
+                <td>18:22</td>
+                <td>9:04</td>
+              </tr>
+              <tr>
+                <td>11.</td>
+                <td>7:40</td>
+                <td>16:58</td>
+                <td>8:13</td>
+              </tr>
+              <tr>
+                <td>12.</td>
+                <td>7:34</td>
+                <td>17:51</td>
+                <td>9:27</td>
+              </tr>
+              <tr>
+                <td>13.</td>
+                <td>--</td>
+                <td>--</td>
+                <td>--</td>
+              </tr>
+              <tr>
+                <td>14.</td>
+                <td>--</td>
+                <td>--</td>
+                <td>--</td>
+              </tr>
+              <tr>
+                <td>15.</td>
+                <td>7:54</td>
+                <td>17:13</td>
+                <td>9:41</td>
+              </tr>
+              <tr>
+                <td>16.</td>
+                <td>7:36</td>
+                <td>16:00</td>
+                <td>8:51</td>
+              </tr>
+              <tr>
+                <td>17.</td>
+                <td>7:34</td>
+                <td>17:19</td>
+                <td>9:07</td>
+              </tr>
+              <tr>
+                <td>18.</td>
+                <td>8:19</td>
+                <td>18:21</td>
+                <td>8:53</td>
+              </tr>
+              <tr>
+                <td>19.</td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>20.</td>
+                <td>--</td>
+                <td>--</td>
+                <td>--</td>
+              </tr>
+              <tr>
+                <td>21.</td>
+                <td>--</td>
+                <td>--</td>
+                <td>--</td>
+              </tr>
+              <tr>
+                <td>22.</td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>23.</td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>24.</td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>25.</td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>26.</td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>27.</td>
+                <td>--</td>
+                <td>--</td>
+                <td>--</td>
+              </tr>
+              <tr>
+                <td>28.</td>
+                <td>--</td>
+                <td>--</td>
+                <td>--</td>
+              </tr>
+              <tr>
+                <td>29.</td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>30.</td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+        <p class="lead"><button class="btn btn-default">Zeit-Archiv</button></p>
+        <p class="pull-right"><span class="label label-default">Zeiterfassung</span> <span class="label label-default">HR</span> <span class="label label-default">Mitarbeiter</span></p>
+        <!--<ul class="list-inline"><li><a href="#">Vor 2 Tagen</a></li><li><a href="#"><i class="glyphicon glyphicon-comment"></i> 4 Kommentare</a></li></ul>-->
       </div>
     </div>
     <hr>
-    <div class="row">
-      <div class="col-xs-12">
-        <h2>Wichtige Informationen bezüglich Integrity</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. 
-          Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis 
-          dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan. 
-          Aliquam in felis sit amet augue.</p>
-        <p class="lead"><button class="btn btn-default">Mehr...</button></p>
-        <p class="pull-right"><span class="label label-default">News</span> <span class="label label-default">Integrität</span> <span class="label label-default">HR</span></p>
-        <ul class="list-inline"><li><a href="#">Vor 5 Tagen</a></li><li><a href="#"><i class="glyphicon glyphicon-comment"></i> 1 Kommentare</a></li></ul>
-      </div>
-    </div>
-    <hr>      
-    <div class="row">
-      <div class="col-xs-12">
-        <h2>Geschäftszahlen 2014</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. 
-          Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis 
-          dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan. 
-          Aliquam in felis sit amet augue.</p>
-        <p class="lead"><button class="btn btn-default">Mehr...</button></p>
-        <p class="pull-right"><span class="label label-default">News</span> <span class="label label-default">Kennzahlen</span> <span class="label label-default">Nash inc.</span></p>
-        <ul class="list-inline"><li><a href="#">Vor 1 Woche</a></li><li><a href="#"><i class="glyphicon glyphicon-comment"></i> 7 Kommentare</a></li></ul>
-      </div>
-    </div>
-    <hr>
-  </div><!--/center-->
+  <!--</div>--> <!--/center-->
 
   <!--right-->
   <div class="col-sm-3">
@@ -187,7 +351,7 @@
         <hr>
   </div><!--/right-->
   <hr>
-</div><!--/container-fluid-->
+</div> <!--/container-fluid-->
 	<!-- script references -->
 		<script src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
