--- a/WebContent/pages/zeiterfassung.html
+++ b/WebContent/pages/zeiterfassung.html
@@ -27,7 +27,7 @@
 	</div>
 	<div class="collapse navbar-collapse">
 		<ul class="nav navbar-nav">
-			<li><a href="index.html">Start</a></li>
+			<li><a href="../index.html">Start</a></li>
 			<li><a href="#">Meine Arbeit</a></li>
 			<li><a href="#">Mitarbeiter</a></li>
       <li><a href="#">Hilfe</a></li>
@@ -35,7 +35,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="#">Urlaubsbeantragung</a></li>
-                <li><a href="pages/zeiterfassung.html">Zeiterfassung</a></li>
+                <li><a href="zeiterfassung.html">Zeiterfassung</a></li>
                 <li class="divider"></li>
                 <li><a href="pages/home.jsp">Zertifikatsverwaltung</a></li>
                 <li class="divider"></li>
