changed pages behavior to use frame with iframe content pages

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -37,7 +37,7 @@
                 <li><a href="#">Urlaubsbeantragung</a></li>
                 <li><a href="pages/zeiterfassung.html">Zeiterfassung</a></li>
                 <li class="divider"></li>
-                <li><a href="pages/home.jsp">Zertifikatsverwaltung</a></li>
+                <li><a href="pages/app_frame.jsp">Zertifikatsverwaltung</a></li>
                 <li class="divider"></li>
                 <li><a href="#">Fahrtenbücher</a></li>
               </ul>
