renamed 'pages' folder into 'certificates' and moved zeiterfassung.htmli into new folder 'timemanager' to proviede cleaner urls e.g. (projectnash/certificates/...), also adjusted paths to use new folder names

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -35,9 +35,9 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="#">Urlaubsbeantragung</a></li>
-                <li><a href="pages/zeiterfassung.html">Zeiterfassung</a></li>
+                <li><a href="timemanager/zeiterfassung.html">Zeiterfassung</a></li>
                 <li class="divider"></li>
-                <li><a href="pages/app_frame.jsp">Zertifikatsverwaltung</a></li>
+                <li><a href="certificates/app_frame.jsp">Zertifikatsverwaltung</a></li>
                 <li class="divider"></li>
                 <li><a href="#">Fahrtenbücher</a></li>
               </ul>
