--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -63,14 +63,14 @@
         <h2>Termine</h2>
     	<div class="panel panel-default">
          	<div class="panel-heading">Besuch von Steve Nash</div>
-         	<div class="panel-body">Unternehmensleiter Steve Nash wird am <b>26.06</b> die Zentrale besuchen und einen kurzen
+         	<div class="panel-body">Unternehmensleiter Steve Nash wird am <b>19. Juni</b> die Zentrale besuchen und einen kurzen
           Vortrag über aktuelle Themen halten.</div>
         </div>
         <hr>
         <div class="panel panel-default">
           <div class="panel-heading">Sommerfest 2015</div>
-          <div class="panel-body">Am <b>13.07</b> findet wie jedes Jahr das Sommerfest der Nash Inc. statt! Bitte geben Sie
-          rechtzeitig bescheid mit wie vielen Personen Sie teilnehmen.</div>
+          <div class="panel-body">Am <b>13. Juli</b> findet, wie jedes Jahr, das Sommerfest der Nash Inc. statt! Bitte geben Sie
+          rechtzeitig Bescheid mit wie vielen Personen Sie teilnehmen.</div>
         </div>
         <hr>
         <div class="panel panel-default">
@@ -94,11 +94,11 @@
         <h2>Partnerschaft mit simpleCert</h2>
         <img src="img/simplecert/simplecert_logo_128x128.png" style="margin: 20px; display: block; margin-left: auto; margin-right: auto" alt="Nash Inc. logo" />
         <p>Die Nash Inc. ist eine Partnerschaft mit dem neuen Unternehmen simpleCert aus Stuttgart eingegangen.
-           Durch die simpleCert wird das alte Zertifikat-System abgeschafft und durch eine neue und einfache Lösung ersetzt.
+           Durch die simpleCert wird das alte Zertifikatssystem abgeschafft und durch eine neue und einfache Lösung ersetzt.
            Zu der Neuerung sagte Unternehmensleiter Steve Nash:</p>
             <blockquote>
-              <p>Dank der <strong>simpleCert</strong> sind wir nun auf dem neusten Stand der Sicherheitstechnik. Dies ist ein wichtiger Schritt für die Nash Inc.</p>
-              <p>Wir freuen uns auf eine gute Zusammenarbeit.</p>
+              <p><em>"Dank der <strong>simpleCert</strong> sind wir nun auf dem neusten Stand der Sicherheitstechnik. Dies ist ein wichtiger Schritt für die Nash Inc.</em></p>
+              <p><em>Wir freuen uns auf eine gute Zusammenarbeit."</em></p>
             </blockquote>
             <p>Um in Zukunft Ihre Sicherheitszertifikate zu verwalten, folgen Sie bitte folgendem Pfad:</p>
             <pre><code>Nash Inc. Intranet -> Services -> Zertifikatsverwaltung</code></pre>
