Prevent use of 'umlaute' in crt information; changed ssl cert error text

--- a/WebContent/certerror/ssl_cert_revoked.html
+++ b/WebContent/certerror/ssl_cert_revoked.html
@@ -19,7 +19,7 @@
 		<center><img src="../img/errors/cleanCert_logo_key_red_failed.png" style="width: 600px;"/></center><br />
 					
 		<div class="col-lg-12 alert alert-danger" style="font-size:24px; text-align:center;">
-    			Your client certificate has either been revoked or is expired. Please contact an administrator for further steps.
+    			Ihr Client-Zertifikat ist abgelaufen oder wurde zurückgezogen. Für weitere Schritte kontaktieren Sie einen Administrator.
             	</div>	
           </form>
       </div>
