--- a/WebContent/certerror/ssl_client_auth_failed.html
+++ b/WebContent/certerror/ssl_client_auth_failed.html
@@ -19,7 +19,7 @@
 		<center><img src="../img/errors/cleanCert_logo_key_red_failed.png" style="width: 600px;"/></center><br />
 					
 		<div class="col-lg-12 alert alert-danger" style="font-size:24px; text-align:center;">
-    			You need a client side certificate issued by Nash Inc's simplecert CA to access this site
+    			Sie benötigen für den Zugriff auf diese Seite ein Client-Zertifikat. Kontaktieren Sie einen Administrator.
             	</div>	
           </form>
       </div>
