--- a/WebContent/certerror/ssl_client_auth_failed.html
+++ b/WebContent/certerror/ssl_client_auth_failed.html
@@ -16,7 +16,7 @@
   
       <div class="modal-body">
           <form class="form col-md-12 center-block">
-		<center><img src="../img/errors/cleanCert_logo_key_red_failed.png" style="width: 600px;"/></center><br />
+		<center><img src="../img/errors/cleanCert_logo_key_red_failed.png" style="max-width:100%; height:auto;"/></center><br />
 					
 		<div class="col-lg-12 alert alert-danger" style="font-size:24px; text-align:center;">
     			Sie benötigen für den Zugriff auf diese Seite ein Client-Zertifikat. Kontaktieren Sie einen Administrator.
